// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly if variants have different prices 1`] = `
<ProductPrice
  variants={
    Array [
      Object {
        "meta_data": Object {
          "eu": Object {
            "price": 1000,
            "size": "Size 8",
          },
        },
        "sku": 1,
        "title": "Small",
      },
      Object {
        "meta_data": Object {
          "eu": Object {
            "price": 1100,
            "size": "Size 10",
          },
        },
        "sku": 2,
        "title": "Medium",
      },
      Object {
        "meta_data": Object {
          "eu": Object {
            "price": 1200,
            "size": "Size 12",
          },
        },
        "sku": 3,
        "title": "Large",
      },
    ]
  }
>
  <div
    className="c-product-price"
  >
    <span>
      £
      10.00
       - £
      12.00
    </span>
  </div>
</ProductPrice>
`;

exports[`renders correctly if variants have similar price 1`] = `
<ProductPrice
  variants={
    Array [
      Object {
        "meta_data": Object {
          "eu": Object {
            "price": 1000,
            "size": "Size 8",
          },
        },
        "sku": 1,
        "title": "Small",
      },
      Object {
        "meta_data": Object {
          "eu": Object {
            "price": 1000,
            "size": "Size 10",
          },
        },
        "sku": 2,
        "title": "Medium",
      },
      Object {
        "meta_data": Object {
          "eu": Object {
            "price": 1000,
            "size": "Size 12",
          },
        },
        "sku": 3,
        "title": "Large",
      },
    ]
  }
>
  <div
    className="c-product-price"
  >
    <span>
      £
      10.00
    </span>
  </div>
</ProductPrice>
`;
